media/src/scss/ltdc-kitchensink/_map-pane.scss
// Map widget pane and panels

.widget-pane {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0;
    border: 0;
    width: 32rem;
    height: 100%;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
    z-index: 1;
    background-color: transparent;
}

.widget-pane-content {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: #fff;
    z-index: 1;
    overflow-y: scroll;
}

.project-pane__header {
    position: -webkit-sticky;
    position: sticky;
    background-color: #fff;
    height: auto;
    padding: 1rem;
}

.pane-content {
    background-color: #fff;
}

.pane-content-tabs {
    position: -webkit-sticky;
    position: sticky;
    background-color: #fff;
    border-bottom: 1px solid #ccc;
}

.pane-content-tabs .nav-item {
    margin: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    background-color: #fff;
    text-align: center;
}

.nav-item:first-child {
    margin-left: 0;
}

.pane-content-tabs .nav-item .nav-link {
    text-align: center;
    padding: 0.75rem 1rem;
    border-radius: 3px;
    border: 0;
    border-bottom-width: 3px;
    border-bottom-style: solid;
    border-bottom-color: transparent;
    background-color: #fff;
    -moz-transition-property: border-bottom-color, background-color;
    transition-property: border-bottom-color, background-color;
    -moz-transition-duration: 300ms;
    transition-duration: 300ms;
    -moz-transition-timing-function: ease-in;
    transition-timing-function: ease-in;
    display: inline-block;
}

.pane-content-tabs .nav-item .nav-link:hover {
    border-bottom-color: #ccc;
    background-color: #fff;
}

@keyframes background-fade {
  0% {
    background-color: #BBDEFB;
  }
  100% {
    background-color: transparent;
  }
}

@keyframes opacity-fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.pane-content-tabs .nav-item .nav-link.active {
    border-bottom-width: 3px;
    border-bottom-style: solid;
    border-bottom-color: blue;
    border-radius: 3px;
    -moz-transition-property: border-bottom-color;
    transition-property: border-bottom-color;
    -moz-transition-duration: 200ms;
    transition-duration: 200ms;
    -moz-transition-timing-function: ease-in;
    transition-timing-function: ease-in;
    animation: background-fade 1s;
}

.pane-content-tabs .nav-item {
    margin-bottom: 0;
}

.pane-content-body {
    background-color: #fff;
    margin: 0;
    padding: 1rem;
}

.button {
    font-family: Poppins;
    font-size: 0.875rem;
    font-weight: 600;
    text-transform: uppercase;
}


//pane scrollbar

#pane-scroll-y::-webkit-scrollbar-track
{
    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.2);
    box-shadow: inset 0 0 3px rgba(0,0,0,0.2);
    background-color: #fff;
}

#pane-scroll-y::-webkit-scrollbar
{
    width: 0.5rem;
    background-color: #fff;
}

#pane-scroll-y::-webkit-scrollbar-thumb
{
    background-color: #999;
}

.overflow-menu {
    position: relative;
}

.overflow-menu-show {
    position: absolute;
    top: 0;
    right: 0;
    padding: .5rem 0;
    margin: .125rem 0 0;
    font-size: .875rem;
    line-height: 20px;
    transform: translate3d(0px, 30px, 0px);
    min-width: 10rem;
    z-index: 1000;
    display: block;
    color: #212529;
    text-align: left;
    list-style: none;
    background-color: #fff;
    background-clip: padding-box;
    border: none;
    -webkit-border-radius: 4px;
    border-radius: 4px;
-webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
    box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
    }

.overflow-menu-show li {
    color: #202124;
}

.overflow-menu-show li a {
padding-bottom: 0.5rem;
    padding-top: 0.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
    display: block;
    cursor: pointer;
}

.overflow-menu-show li a:hover {
    background-color: #efefef;
}

.overflow-icon {
    padding-right: 0.875rem;
}

